--- a/app/src/main/res/layout/layout_list_tasks.xml
+++ b/app/src/main/res/layout/layout_list_tasks.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
-    android:layout_margin="2dp"
     android:elevation="1dp"
     android:orientation="vertical">
 
@@ -51,4 +50,4 @@
 
     </RelativeLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
