--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -78,25 +78,22 @@
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
-<!--                <TextView
-                    android:id="@+id/tvRatingPercent"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:text="0%"
+                    android:text="Rating: "
                     android:textColor="#2196F3"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvRatingPercent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:text="Job Success"
+                    android:text="0"
                     android:textColor="#2196F3"
                     android:textSize="12sp"
-                    android:textStyle="bold" />-->
-
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -109,15 +106,18 @@
             android:layout_below="@id/layout_profile"
             android:background="#B3DBFC">
 
-            <RatingBar
+            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                 android:id="@+id/ratingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="30dp"
+                android:isIndicator="true"
+                android:max="5"
                 android:numStars="5"
+                android:progressTint="@color/colorPrimaryDark"
                 android:stepSize="1.0"
-                android:theme="@style/CustomRatingBar" />
+                android:theme="@style/Widget.MaterialRatingBar.RatingBar" />
 
         </RelativeLayout>
 
