--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
 
     <style name="CustomRatingBar" parent="Theme.AppCompat">
         <item name="colorControlNormal">#CDDC39</item>
-        <item name="colorControlActivated">#FFC107</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
 
